<resources>
    <string name="app_name">SmartWeight</string>

    <string name="title_main">SMART Weight</string>
    <string name="title_guide_training">Guide Training</string>
    <string name="title_connect_device">Connect Device</string>

    <string name="blnak"></string>

    <string name="level1">LEVEL 01</string>
    <string name="level2">LEVEL 02</string>
    <string name="level3">LEVEL 03</string>
    <string name="level4">LEVEL 04</string>
    <string name="level5">LEVEL 05</string>
    <string name="level6">LEVEL 06</string>
    <string name="level7">LEVEL 07</string>
    <string name="level8">LEVEL 08</string>
    <string name="level9">LEVEL 09</string>
    <string name="level10">LEVEL 10</string>
    <string name="level11">LEVEL 11</string>
    <string name="level12">LEVEL 12</string>
    <string name="level13">LEVEL 13</string>
    <string name="level14">LEVEL 14</string>
    <string name="level15">LEVEL 15</string>

    <string name="title_step">STEP %d</string>
    <string name="text_per_exercise">%1$d of %2$d Exercise</string>

    <string name="text_per_set">%1$d/%2$d</string>


    <string name="text_bench_press">BENCH PRESS</string>
    <string name="text_cable_pushdown">CABLE PUSHDOWN</string>
    <string name="text_plank">PLANK</string>
    <string name="text_kick_back">KICK BACK</string>
    <string name="text_fly">FLY</string>
    <string name="text_curl">CURL</string>
    <string name="text_lunge">LUNGE</string>
    <string name="text_row">ROW</string>
    <string name="text_sit_up">SIT UP</string>
    <string name="text_squat">SQUAT</string>
    <string name="text_lateral_raises">LATERAL RAISES</string>
    <string name="text_deadlift">DEADLIFT</string>
    <string name="text_back_extension">BACK EXTENSION</string>
    <string name="text_lat_pulldown">LAT PULLDOWN</string>
    <string name="text_shoulder_press">SHOULDER PRESS</string>

    <string name="text_flipper_bench_press">BENCH\nPRESS</string>
    <string name="text_flipper_cable_pushdown">CABLE\nPUSHDOWN</string>
    <string name="text_flipper_plank">PLANK</string>
    <string name="text_flipper_kick_back">KICK\nBACK</string>
    <string name="text_flipper_fly">FLY</string>
    <string name="text_flipper_curl">CURL</string>
    <string name="text_flipper_lunge">LUNGE</string>
    <string name="text_flipper_row">ROW</string>
    <string name="text_flipper_sit_up">SIT UP</string>
    <string name="text_flipper_squat">SQUAT</string>
    <string name="text_flipper_lateral_raises">LATERAL\nRAISES</string>
    <string name="text_flipper_deadlift">DEADLIFT</string>
    <string name="text_flipper_back_extension">BACK\nEXTENSION</string>
    <string name="text_flipper_lat_pulldown">LAT\nPULLDOWN</string>
    <string name="text_flipper_shoulder_press">SHOULDER\nPRESS</string>


    <string name="text_angle_left">L</string>
    <string name="text_angle_right">R</string>

    <string name="text_diplay_date">dd MMMM, yyyy</string>


    <string name="text_dumbell">DUMBELL</string>
    <string name="text_start">START</string>
    <string name="text_connect">CONNECT</string>

    <string name="text_ready">READY</string>

    <![CDATA[Goal <font color=\"#a7ef52\">%1$d</font>]]>

    <string name="text_not_correct_workout"><![CDATA[Please advance to the correct<br/><b><font color=\"#53e1f7\">Curl</font></b> movement]]></string>

    <string name="text_angle">%1$d<font size="10"><sup>˚</sup></font></string>

    <string name="text_biceps"><u>BICEPS CURLS</u></string>


    <string name="text_set">Set</string>
    <string name="text_total">Total</string>


    <string name="text_share">Share</string>


    <string name="text_device_firmware_decription">Do not power off your mobile\nuntil this update is complete.\n\nDo not operate SMART ROPE\nduring this update process.</string>
    <string name="title_device_firmware_update">Firmware Update</string>
</resources>
