<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="226dp"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/exercise_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onViewClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_workout"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="11sp"
                    android:textColor="#b4b4b4b4"
                    android:text="@string/text_curl"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/exercise_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onViewClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_workout"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="11sp"
                    android:textColor="#b4b4b4b4"
                    android:text="@string/text_lateral_raises"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exercise_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onViewClick"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/selector_workout"
                    android:background="@drawable/round_button"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="11sp"
                    android:textColor="#b4b4b4b4"
                    android:text="@string/text_shoulder_press"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/exercise_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onViewClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_workout"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="#b4b4b4b4"
                    android:textSize="11sp"
                    android:text="@string/text_kick_back"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/exercise_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onViewClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_workout"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="#b4b4b4b4"
                    android:textSize="11sp"
                    android:text="@string/text_lunge"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exercise_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onViewClick"
                android:visibility="invisible"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_workout"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="11sp"
                    android:textColor="#b4b4b4b4"
                    android:text="one linedsafsdfasdfasdfasdffasdf"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/scrollArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icn_arrow"
                android:onClick="onViewClick"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>