<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/breaktime_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="72dp"
        app:contentInsetStart="72dp"
        app:theme="@style/ThemeOverlay.Custom.ActionBar"
        app:title="@string/text_per_exercise" >


        <ImageButton
            android:id="@+id/deviceBatteryState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_toolbar_btn"
            android:padding="10dp"
            android:src="@drawable/ic_title_connect_no" />


    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_per_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/text_per_set"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:layout_marginLeft="4dp"
            android:text="Sets"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/breaktime_sec"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center">
            <TextView
                android:id="@+id/break_time_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="140sp"
                android:text="60"
                />

                <TextView
                    android:gravity="center"
                    android:layout_alignBottom="@+id/break_time_sec"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:text="sec"
                    />

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="NEXT"
            />

        <TextView
            android:id="@+id/next_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/text_biceps"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/white_15"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/next_equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="BARBELL"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_weight="1"
        android:layout_marginBottom="25dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_bt_exit_btn"/>

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_bt_next_btn"
            android:onClick="onClick"
            />
    </RelativeLayout>

</LinearLayout>
