<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/level_01">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="72dp"
        app:contentInsetStart="72dp"
        app:theme="@style/ThemeOverlay.Custom.ActionBar"
        app:title="@string/guide_training" >


        <ImageButton
            android:id="@+id/deviceBatteryState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/selector_toolbar_btn"
            android:padding="10dp"
            android:src="@drawable/ic_title_connect_no" />

    </android.support.v7.widget.Toolbar>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:text="1 of 5 Exercise"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/PrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:src="@drawable/selector_workout_arrow_l" />

            <ViewFlipper
                android:id="@+id/viewflipper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-10dp"
                android:layout_marginRight="-10dp"
                android:layout_weight="1"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_flipper_bench_press"
                    android:textStyle="bold"
                    android:lineSpacingMultiplier="0.8"
                    android:textColor="@color/white_80"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="next"
                    android:textStyle="bold"
                    android:lineSpacingMultiplier="0.8"
                    android:textColor="@color/white"
                    android:textSize="50sp" />
            </ViewFlipper>

            <ImageButton
                android:id="@+id/NextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:src="@drawable/selector_workout_arrow_r" />
        </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/text_dumbell"
        />

    <ImageButton
        android:id="@+id/videoPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:background="@drawable/selector_videoplay_btn"
        android:onClick="onClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_60"
                android:textSize="15sp"
                android:text="reps"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:text="10"/>

        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_marginLeft="32dp"
            android:layout_height="match_parent"
            android:background="@color/white_20"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_60"
                android:textSize="15sp"
                android:text="break time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="33sp"
                    android:text="60"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="top"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="S"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_marginLeft="30dp"
            android:layout_height="match_parent"
            android:background="@color/white_20"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white_60"
                android:textSize="15sp"
                android:text="weight"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="33sp"
                    android:text="10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="top"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="kg"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_start"
        android:textSize="22sp"
        android:background="@drawable/selector_btn"
        android:onClick="onClick"/>


</LinearLayout>
